// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for wrapContent: false, disablePagination: {"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false} and theme: light 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #010205 !important;
  text-align: center !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #010205 !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  text-align: center !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
.pagination {
  display: none;
  text-align: center;
  line-height: 8px;
}
.bullet {
  display: inline-block;
  border-radius: 4px;
  background: #949598;
  margin: 0 4px;
  transition: background-color 0.5s, width 0.5s;
  width: 8px;
  height: 8px;
}
.bullet--active {
  background: #010205;
  width: 20px;
}
@media(min-width:480px) {
  .pagination {
    display: block;
  }
}

@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: 0;
    bottom: 0;
  }
  .pagination {
    display: none;
  }
}

@media(min-width:1000px) {
  .pagination {
    display: block;
  }
}

@media(min-width:1300px) {
  .pagination {
    display: none;
  }
}

@media(min-width:1760px) {
  .pagination {
    display: block;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapContent: false, disablePagination: false and theme: dark 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #FBFCFF !important;
  max-width: 900px !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #FBFCFF !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  max-width: 550px !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
.pagination {
  display: block;
  text-align: center;
  line-height: 8px;
}
.bullet {
  display: inline-block;
  border-radius: 4px;
  background: #7E7F82;
  margin: 0 4px;
  transition: background-color 0.5s, width 0.5s;
  width: 8px;
  height: 8px;
}
.bullet--active {
  background: #FBFCFF;
  width: 20px;
}
@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: 0;
    bottom: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapContent: false, disablePagination: false and theme: light 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #010205 !important;
  max-width: 900px !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #010205 !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  max-width: 550px !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
.pagination {
  display: block;
  text-align: center;
  line-height: 8px;
}
.bullet {
  display: inline-block;
  border-radius: 4px;
  background: #949598;
  margin: 0 4px;
  transition: background-color 0.5s, width 0.5s;
  width: 8px;
  height: 8px;
}
.bullet--active {
  background: #010205;
  width: 20px;
}
@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: 0;
    bottom: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapContent: false, disablePagination: true and theme: light 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #010205 !important;
  max-width: 900px !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #010205 !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  max-width: 550px !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: 0;
    bottom: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapContent: true, disablePagination: false and theme: light 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #010205 !important;
  text-align: center !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #010205 !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  text-align: center !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
  padding: 0 calc(clamp(22px, 10.625vw - 12px, 192px) + 7%) 0 clamp(22px, 10.625vw - 12px, 192px) !important;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.header {
  padding: 0 clamp(22px, 10.625vw - 12px, 192px);
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
.pagination {
  display: block;
  text-align: center;
  line-height: 8px;
}
.bullet {
  display: inline-block;
  border-radius: 4px;
  background: #949598;
  margin: 0 4px;
  transition: background-color 0.5s, width 0.5s;
  width: 8px;
  height: 8px;
}
.bullet--active {
  background: #010205;
  width: 20px;
}
@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: clamp(22px, 10.625vw - 12px, 192px);
    bottom: 0;
  }
}

@media(min-width:1760px) {
  .splide__track {
    padding: 0 calc(clamp(22px, 10.625vw - 12px, 192px) + 7%) 0 clamp(22px, 10.625vw - 12px, 192px) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapContent: true, disablePagination: true and theme: light 1`] = `
":host {
  display: grid !important;
  max-width: 1920px !important;
  margin-left: auto !important;
  margin-right: auto !important;
  gap: clamp(2rem, 0.56vw + 1.89rem, 2.5rem) !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  margin: 0 !important;
  color: #010205 !important;
  text-align: center !important;
}
p,::slotted([slot=description]) {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  margin: 0 !important;
  color: #010205 !important;
  padding: clamp(.25rem, 0.28vw + 0.19rem, .5rem) 0 0 !important;
  text-align: center !important;
  grid-column: 1 !important;
}
.splide {
  overflow: hidden;
}
.splide__track {
  cursor: grab;
  padding: 0 calc(clamp(22px, 10.625vw - 12px, 192px) + 7%) 0 clamp(22px, 10.625vw - 12px, 192px) !important;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  flex-shrink: 0;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  transform: translateZ(0);
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.header {
  padding: 0 clamp(22px, 10.625vw - 12px, 192px);
}
.nav {
  display: none;
}
.btn {
  padding: 8px;
}
@media(min-width:760px) {
  .header {
    position: relative;
    min-height: 40px;
  }
  .nav {
    display: grid;
    grid-auto-flow: column;
    gap: 4px;
    position: absolute;
    right: clamp(22px, 10.625vw - 12px, 192px);
    bottom: 0;
  }
}

@media(min-width:1760px) {
  .splide__track {
    padding: 0 calc(clamp(22px, 10.625vw - 12px, 192px) + 7%) 0 clamp(22px, 10.625vw - 12px, 192px) !important;
  }
}
"
`;
